--- a/postman/SimpleWebApp.postman_environment.json
+++ b/postman/SimpleWebApp.postman_environment.json
@@ -1,5 +1,6 @@
 {
-	"id": "6a02e1bc-1e88-4432-8358-aff295344611",
+	"id": "aea0f1bd-9f37-4db3-8709-3eee3309446e",
+	"name": "Base",
 	"values": [
 		{
 			"key": "base_url",
@@ -8,8 +9,7 @@
 			"enabled": true
 		}
 	],
-	"name": "Globals",
-	"_postman_variable_scope": "globals",
-	"_postman_exported_at": "2025-07-05T06:27:54.208Z",
-	"_postman_exported_using": "Postman/11.46.6-250523-1629"
+	"_postman_variable_scope": "environment",
+	"_postman_exported_at": "2025-07-09T08:44:32.812Z",
+	"_postman_exported_using": "Postman/11.53.0"
 }
