--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,12 +55,16 @@ jobs:
 
       - name: Install Newman
         run: npm install -g newman
+        
+      - name: Show environment file
+        run: cat postman-tests/SimpleWebApp.postman_environment.json
 
       - name: Run Postman API Tests
         run: |
           newman run postman/SimpleWebApp-API-Testing.postman_collection.json \ 
-            -e postman-tests/SimpleWebApp.postman_environment.json \
-            -r cli,html --reporter-html-export TestResults/newman-report.html
+            --environment postman-tests/SimpleWebApp.postman_environment.json \
+            --reports cli,html \
+            --reporter-html-export TestResults/newman-report.html
 
       - name: Upload Newman Report
         uses: actions/upload-artifact@v4
