--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Run Postman API Tests
         run: |
           newman run postman/SimpleWebApp-API-Testing.postman_collection.json \ 
-            --environment postman-tests/SimpleWebApp.postman_environment.json \
+            --environment postman/SimpleWebApp.postman_environment.json \
             --reports cli,html \
             --reporter-html-export TestResults/newman-report.html
 
