--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,8 @@ jobs:
       - name: Run Postman API Tests
         run: |
           newman run postman/SimpleWebApp-API-Testing.postman_collection.json \ 
-            --environment postman/SimpleWebApp.postman_environment.json \
-            --reports cli,html \
+            -e postman/SimpleWebApp.postman_environment.json \
+            -r cli,html \
             --reporter-html-export TestResults/newman-report.html
 
       - name: Upload Newman Report
